# ai-review

./: .gitignore  Cargo.toml  README.md  TODO.md  install.sh  uninstall.sh
src/: cache.rs  cli.rs  config.rs  git.rs  init.rs  llm.rs  main.rs  output.rs  review.rs  ui_log.rs
