[package]
name = "ai-review"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
tokio = { version = "1.50", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "6.0"
ignore = "0.4"
sha2 = "0.10"
futures = "0.3"
